# interview-prep

./: .gitignore
interview/: SETUP_INSTRUCTIONS.md  TRIVIA_SETUP.md  requirements.txt
interview/agent/: README.md  agent.py  pyproject.toml  trivia_data.py
interview/agent-node/: agent.ts  package-lock.json  tsconfig.json
interview/backend/: README.md
interview/backend/src/: app.ts  server.ts
interview/frontend/: package-lock.json  package.json
interview/frontend/src/: App.tsx
livekit-starter-code/: SCORE_PERSISTENCE_GUIDE.md
livekit-starter-code/agent-node/: README.md  agent.ts  package.json  trivia-data.ts
livekit-starter-code/agent-starter-react/: app-config.ts  package-lock.json
livekit-starter-code/agent-starter-react/.next/: app-build-manifest.json  build-manifest.json  postcss.js  prerender-manifest.json  trace
livekit-starter-code/agent-starter-react/styles/: globals.css
livekit-starter-code/backend/: README.md  package-lock.json  package.json  tsconfig.json
livekit-starter-code/backend/data/: scores.json
oss-finder/backend/: package-lock.json  package.json
oss-finder/backend/src/: index.ts
oss-finder/client/: package-lock.json  package.json
oss-finder/client/src/: App.tsx
recipe-cataloging/backend/: README.md  package-lock.json  package.json
recipe-cataloging/backend/src/: index.ts
recipe-cataloging/frontend/: README.md  package-lock.json
reddit-ranker/: README.md
reddit-ranker/backend/: .env.example  README.md  package-lock.json  package.json
reddit-ranker/frontend/: index.html  package-lock.json  package.json
(+177 files in other folders)
