[project]
name = "trivia-agent"
version = "0.1.0"
description = "LiveKit voice agent for trivia game"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "livekit-agents[openai]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

